--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -1,75 +1,198 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Alquiler Consulta Sanitaria - TV Display</title>
   <style>
-    /* Ajustes pensados para TV */
-    html,body { height:100%; margin:0; background:#000; color:#fff; font-family: "Segoe UI", Roboto, Arial, sans-serif; }
-    .carousel-container { width:100%; height:100vh; overflow:hidden; position:relative; background:#000; }
-    .carousel-slide { position:absolute; inset:0; opacity:0; transition:opacity 1s ease-in-out; display:flex; align-items:center; justify-content:center; }
-    .carousel-slide.active { opacity:1; }
-    .carousel-slide img { width:100%; height:100%; object-fit:cover; display:block; }
-    /* controles mínimos */
-    .carousel-controls{ position:absolute; bottom:24px; left:50%; transform:translateX(-50%); display:flex; gap:10px; z-index:30;}
-    .carousel-dot{ width:14px;height:14px;border-radius:50%;background:rgba(255,255,255,0.4);cursor:pointer; }
-    .carousel-dot.active{ background:#fff; transform:scale(1.2); }
-    body.kiosk { cursor:none; } /* si quieres ocultar cursor en TV */
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%;font-family:Segoe UI,Roboto,Arial,sans-serif;background:#000;color:#fff}
+    header{background:linear-gradient(135deg,#2563eb,#1e40af);color:#fff;padding:2rem 1.5rem;text-align:center}
+    h1{font-size:3rem}
+    .price-banner{background:#3b82f6;color:#fff;padding:1.6rem;text-align:center;font-weight:700}
+    .main-content{padding:1rem;display:flex;flex-direction:column;gap:1rem;flex:1}
+    .carousel-container{width:100%;height:80vh;border-radius:8px;overflow:hidden;position:relative;background:#000}
+    .carousel{width:100%;height:100%;position:relative}
+    .carousel-slide{position:absolute;inset:0;opacity:0;transition:opacity 1s ease-in-out;display:flex;align-items:center;justify-content:center;background:#000}
+    .carousel-slide.active{opacity:1}
+    .carousel-slide img{width:100%;height:100%;object-fit:cover;display:block}
+    .carousel-controls{position:absolute;bottom:14px;left:50%;transform:translateX(-50%);display:flex;gap:8px;z-index:20}
+    .carousel-dot{width:12px;height:12px;border-radius:50%;background:rgba(255,255,255,0.35);border:2px solid rgba(0,0,0,0.2);cursor:pointer}
+    .carousel-dot.active{background:#fff;transform:scale(1.2);box-shadow:0 0 8px rgba(255,255,255,0.9)}
+    .loading{display:flex;align-items:center;justify-content:center;color:#ddd;font-size:1.1rem;height:100%}
+    /* Debug panel */
+    #debugPanel{
+      position:fixed; right:12px; top:12px; background:rgba(0,0,0,0.6); color:#fff; padding:10px; border-radius:8px; z-index:9999;
+      font-size:12px; max-width:320px; max-height:60vh; overflow:auto;
+    }
+    #debugPanel h4{margin:0 0 .5rem;font-size:13px}
   </style>
 </head>
-<body class="kiosk">
-  <div class="carousel-container" id="carousel">
-    <!-- Slides generadas por JS -->
+<body>
+  <header>
+    <h1>Alquiler de Consulta Sanitaria</h1>
+    <p style="opacity:.95">CENTRO SANITARIO LARRABIDE</p>
+  </header>
+
+  <div class="price-banner">Alquila tu consulta — desde 180€/mes</div>
+
+  <div class="main-content">
+    <div class="carousel-container" aria-label="Galería de imágenes">
+      <div class="carousel" id="carousel">
+        <div class="loading" id="loading">Comprobando imágenes…</div>
+      </div>
+      <div class="carousel-controls" id="carouselControls" aria-hidden="true"></div>
+    </div>
+  </div>
+
+  <div id="debugPanel" aria-hidden="false" role="status" aria-live="polite" style="display:none">
+    <h4>Debug de imágenes</h4>
+    <div id="debugContent">Comprobando…</div>
   </div>
 
   <script>
-    // Lista: si usas asset pipeline puedes generar la lista desde Rails (ver nota abajo)
+    // Lista de imágenes EXACTAS que están subidas (según repo)
     const images = [
-      "<%= asset_path 'tv_add/sala1.jpeg' %>",
-      "<%= asset_path 'tv_add/sala2.jpeg' %>",
-      "<%= asset_path 'tv_add/consulta1.jpeg' %>"
-      // ...
+      "consulta2.jpeg","consulta3.jpeg","consulta4.jpeg","consulta5.jpeg","consulta6.jpeg",
+      "consulta7.jpeg","consulta8.jpeg","consulta9.jpeg","consulta10.jpeg","consulta11.jpeg",
+      "consulta12.jpeg","consulta13.jpeg","detalle.jpeg","detallecamilla.jpeg",
+      "pasillo.jpeg","pasillo2.jpeg","pasillo3.jpeg","pasillo4.jpeg",
+      "salaespera2.jpeg","salaespera3.jpeg"
     ];
 
     const carousel = document.getElementById('carousel');
-    let current = 0;
-    let interval;
+    const controls = document.getElementById('carouselControls');
+    const loading = document.getElementById('loading');
+    const debugPanel = document.getElementById('debugPanel');
+    const debugContent = document.getElementById('debugContent');
 
-    function createSlides() {
-      carousel.innerHTML = '';
-      images.forEach((src, i) => {
-        const slide = document.createElement('div');
-        slide.className = 'carousel-slide' + (i===0 ? ' active' : '');
-        const img = document.createElement('img');
-        img.src = src;
-        img.alt = src.split('/').pop().replace(/[-_\.]/g,' ');
-        img.loading = i===0 ? 'eager' : 'lazy';
-        slide.appendChild(img);
-        carousel.appendChild(slide);
+    let current = 0;
+    let intervalId;
+
+    // Calcular basePath según la URL actual (asegura que las rutas relativas apunten a /tv_add/)
+    function getBasePath(){
+      // location.pathname por ejemplo: /tv_add/ o /user/repo/tv_add/
+      const path = location.pathname;
+      // Si termina en '/', base = path; si termina en 'index.html', quitarlo.
+      if(path.endsWith('/')) return path;
+      return path.substring(0, path.lastIndexOf('/') + 1);
+    }
+    const basePath = getBasePath();
+
+    // Mostrar panel debug (visible)
+    function showDebug(lines){
+      debugPanel.style.display = 'block';
+      debugContent.innerHTML = lines.map(l => `<div>${l}</div>`).join('');
+    }
+
+    // Comprueba si cada imagen existe (preload) y devuelve solo las válidas
+    function filterExistingImages(list, cb){
+      const normalized = list.map(name => ({ src: name })).filter(Boolean);
+      if(normalized.length === 0) return cb([]);
+      const valid = [];
+      const missing = [];
+      let checked = 0;
+      normalized.forEach(item => {
+        const tester = new Image();
+        tester.onload = () => { valid.push(item); checked++; if(checked === normalized.length) cb(valid, missing); };
+        tester.onerror = () => { missing.push(item.src); checked++; if(checked === normalized.length) cb(valid, missing); };
+        // Usa ruta absoluta basada en basePath para evitar problemas de resolución
+        tester.src = basePath + item.src;
       });
+    }
+
+    function buildSlides(validImages){
+      carousel.innerHTML = '';
+      controls.innerHTML = '';
+      if(validImages.length === 0){
+        carousel.innerHTML = '<div class="loading">No hay imágenes disponibles.</div>';
+        return;
+      }
+
+      validImages.forEach((imgObj, i) => {
+        const slide = document.createElement('div');
+        slide.className = 'carousel-slide' + (i === 0 ? ' active' : '');
+
+        const wrapper = document.createElement('div');
+        wrapper.style.width = '100%';
+        wrapper.style.height = '100%';
+
+        const img = document.createElement('img');
+        // usa basePath + src
+        img.src = basePath + imgObj.src;
+        img.alt = imgObj.src.replace(/[-_\.]/g,' ').replace(/\bjpeg\b|\bjpg\b/gi,'').replace(/\d+/g,'').trim() || 'Imagen';
+        img.loading = i === 0 ? 'eager' : 'lazy';
+
+        img.onerror = function(){
+          console.warn('Imagen no encontrada (en build):', img.src);
+          this.style.display = 'none';
+          const err = document.createElement('div');
+          err.className = 'loading';
+          err.textContent = 'Imagen no disponible';
+          slide.appendChild(err);
+        };
+
+        wrapper.appendChild(img);
+        slide.appendChild(wrapper);
+        carousel.appendChild(slide);
+
+        const dot = document.createElement('span');
+        dot.className = 'carousel-dot' + (i===0 ? ' active' : '');
+        dot.dataset.index = i;
+        dot.addEventListener('click', () => showSlide(i));
+        controls.appendChild(dot);
+      });
+
+      if(loading) loading.style.display = 'none';
       startAutoplay();
     }
 
-    function showSlide(n) {
+    function showSlide(n){
       const slides = document.querySelectorAll('.carousel-slide');
+      const dots = document.querySelectorAll('.carousel-dot');
+      if(slides.length === 0) return;
       slides.forEach(s => s.classList.remove('active'));
+      dots.forEach(d => d.classList.remove('active'));
       current = (n + slides.length) % slides.length;
       slides[current].classList.add('active');
+      dots[current].classList.add('active');
     }
 
-    function next() { showSlide(current + 1); }
-    function startAutoplay(){ stopAutoplay(); interval = setInterval(next, 5000); }
-    function stopAutoplay(){ if(interval) clearInterval(interval); }
+    function nextSlide(){ showSlide(current + 1); }
 
-    createSlides();
-    // ocultar cursor tras unos segundos de inactividad (opcional)
-    let timeoutCursor;
-    document.addEventListener('mousemove', () => {
-      document.body.classList.remove('kiosk');
-      clearTimeout(timeoutCursor);
-      timeoutCursor = setTimeout(()=> document.body.classList.add('kiosk'), 2000);
+    function startAutoplay(){ stopAutoplay(); intervalId = setInterval(nextSlide, 5000); }
+    function stopAutoplay(){ if(intervalId) clearInterval(intervalId); }
+
+    // Inicializar: pre-filtrar imágenes y luego construir slides
+    filterExistingImages(images, function(valid, missing){
+      // Mostrar debug en consola y panel
+      console.log('Imágenes válidas:', valid.map(v=>v.src));
+      console.log('Imágenes faltantes:', missing);
+      showDebug([
+        `<strong>basePath:</strong> ${basePath}`,
+        `<strong>cargadas:</strong> ${valid.length}`,
+        `<strong>faltan:</strong> ${missing.length}`,
+        missing.length ? `<em>Faltan:</em> ${missing.join(', ')}` : 'Todas las imágenes disponibles'
+      ]);
+      buildSlides(valid);
     });
+
+    // Pausar autoplay al interactuar
+    carousel.addEventListener('mouseenter', stopAutoplay);
+    carousel.addEventListener('mouseleave', startAutoplay);
+
+    // Saver overlay (fade a negro) cada 5 minutos
+    const overlay = document.createElement('div');
+    overlay.style.position = 'fixed';
+    overlay.style.inset = '0';
+    overlay.style.background = 'black';
+    overlay.style.opacity = '0';
+    overlay.style.pointerEvents = 'none';
+    overlay.style.transition = 'opacity 2s';
+    document.body.appendChild(overlay);
+    function fadeCycle(){ overlay.style.opacity = '1'; setTimeout(()=> overlay.style.opacity = '0', 3000); }
+    setInterval(fadeCycle, 5 * 60 * 1000);
+    setTimeout(fadeCycle, 10000);
   </script>
 </body>
 </html>
